# personal-finance-agent

./: .gitignore  AGENTS.md  BUILD_PLAN.md  CLAUDE.md  CLAUDE_CODE_HANDOFF.md  CUTOVER_PLAN.md  HANDOFF.md  READINESS_REPORT.md  README.md  UX_FIXES_2026-06-30.md  pyproject.toml
.claude/: settings.json
claude-integration/: INSTALL.md  finance-instructions.md  mcp-registration.json
claude-integration/finance-skill/: SKILL.md
docs/: design-doc.md  diagrams.md  session-learnings-2026-07-07.md
docs/specs/: todoist-reconcile-and-cleanup.md
hooks/: README.md  pre-commit
src/financial_agent/: __init__.py  adversarial.py  analytics.py  backfill.py  background.py  build_info.py  calendar.py  ui.py  (+33 more)
tests/: conftest.py  test_adversarial.py  test_analytics.py  test_auto_model.py  test_backfill.py  test_background.py  test_build_info.py  test_calendar.py  test_calendar_facts.py  test_card_import.py  test_check_suggestions.py  test_create_todoist_task.py  test_debts.py  test_digest.py  test_digest_coverage_trough.py  test_doc_drift_guard.py  test_drift.py  test_follow_ups.py  test_goals.py  test_grounding.py  test_guardrails.py  test_income_sources.py  test_integration_assets.py  test_lifecycle_contracts.py  test_list_todoist_project.py  test_manual_balance.py  test_memory.py  test_migration.py  test_obligations.py  test_onboarding.py  test_parity.py  test_reconciliation.py  test_reconciliation_closeout.py  test_release_gate.py  test_scheduled.py  test_schema_versioning.py  test_server_ergonomics.py  test_stale_balance_floor_verdict.py  test_statements.py  test_status.py  (+14 more)
